--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -1,3 +1,7 @@
+.Main-container {
+  font-size: 1rem;
+}
+
 .Main-content {
   display: flex;
   position: absolute;
@@ -31,23 +35,69 @@
   margin-left: 45vw;
 }
 
+.Main-nav-reset {
+  margin-top: 210px;
+  position: absolute;
+  margin-left: 47vw;
+}
+
 @media only screen and (min-width: 768px) {
   .Main-nav-prev {
     margin-top: 55px;
     position: absolute;
-    margin-left: -10vw;
+    margin-left: -7vw;
   }
 
   .Main-nav-next {
     margin-top: 55px;
     position: absolute;
-    margin-left: 10vw;
+    margin-left: 9vw;
   }
 
   .Main-nav-jump {
-    margin-top: 140px;
+    margin-top: 145px;
     position: absolute;
-    margin-left: 45vw;
+    margin-left: 47vw;
+  }
+
+  .Main-nav-reset {
+    margin-top: 185px;
+    position: absolute;
+    margin-left: 48vw;
+  }
+
+  .square {
+    margin-left: 1vw;
+  }
+}
+
+@media only screen and (min-device-width: 414px) and (max-device-height: 736px) {
+  .Main-nav-prev {
+    margin-top: 150px;
+    position: absolute;
+    margin-left: -20vw;
+  }
+
+  .Main-nav-next {
+    margin-top: 150px;
+    position: absolute;
+    margin-left: 8vw;
+  }
+
+  .Main-nav-jump {
+    margin-top: 180px;
+    position: absolute;
+    margin-left: 38vw;
+  }
+
+  .Main-nav-reset {
+    margin-top: 215px;
+    position: absolute;
+    margin-left: 42vw;
+  }
+
+  .square {
+    margin-left: -8vw;
   }
 }
 
@@ -55,7 +105,7 @@
   display: inline-block;
   padding: 5px;
   align-items: center;
-  font-size: 1.2rem;
+  font-size: 1rem;
   padding-bottom: 1rem;
   color: black;
   width: max-content;
@@ -77,6 +127,7 @@
   text-align: center;
   vertical-align: middle;
   line-height: 90px;
-  margin-right: -1px;
+  left: 45%;
   margin-top: 30px;
+  transform: translateX(0%);
 }
